spacing between heading and blog post fixed with br

--- a/media/stylesheets/base.css
+++ b/media/stylesheets/base.css
@@ -131,9 +131,6 @@ p#metadata {
     font-size: 1.03em;
     color: #808080;
     font-weight: bold;
-    margin-bottom: 2em;
-}
-span#metadata {
 }
 
 .base-image img {
