--- a/media/stylesheets/big_index.css
+++ b/media/stylesheets/big_index.css
@@ -18,12 +18,6 @@
     margin-top: -.5em;
 }
 
-.big-index pre {
-    display: inline;
-    background: white;
-    border: none;
-    line-height: 250%
-}
 .big-index pre, .big-index code {
     display: none;
 }
